  no longer receives blocks.
* GScraper::SponsoredLinks.new and GScraper::Search::Page.new now take 
  blocks.
* Renamed GScraper::Search::Query to GScraper::Search::WebQuery.
* Added GScraper::Search::Query which supports building query expressions.
* GScraper::Search::WebQuery#page and GScraper::Search::WebQuery#sponsored_links
  no longer take blocks.
* Added GScraper::Search::AJAXQuery.

== 0.1.8 / 2008-04-30

* Added the GScraper.user_agent_alias=(name) method.
* Added URI::HTTP::QueryParams module.
* Changed license from MIT to GPL-2.

== 0.1.7 / 2008-04-28

* Added support for specifing Search modifiers.

  Search.query(:filetype => :xls)

* Added the Search::Result#page method.

== 0.1.6 / 2008-03-15

* Renamed GScraper.http_agent to GScraper.web_agent.
* Added GScraper.proxy for global proxy configuration.
* Added the WebAgent module.
* Renamed Search::Query#first_result to Search::Query#top_result.
* Updated Search::Query#page logic for the new DOM layout being used.
* Added support for Sponsored Ad scraping.
  * Added the methods Query#sponsored_links and Query#top_sponsored_link.
* Added examples to README.txt.

== 0.1.5 / 2007-12-29

* Fixed class inheritance in gscraper/extensions/uri/http.rb, found by
  sanitybit.

== 0.1.4 / 2007-12-23

* Added Search::Query#result_at for easier access of a single result at
  a given index.
* Adding scraping of the "Cached" and "Similar Pages" URLs of Search
  Results.
* Added methods to Search::Page for accessing cached URLs, cached pages,
  similar query URLs and similar Queries in mass.
* Search::Query#page and Search::Query#first_page now can receive blocks.
* Improved the formating of URL query parameters.
* Added more unit-tests.
* Fixed scraping of Search Result summaries.
* Fixed various bugs in Search::Query uncovered during unit-testing.
* Fixed typos in Search::Page's documentation.

== 0.1.3 / 2007-12-22

* Added the Search::Page class, which contains many of convenance methods