@@ -22,8 +22,13 @@ lib/gscraper/search.rb
 lib/gscraper/gscraper.rb
 lib/gscraper/version.rb
 lib/gscraper.rb
-test/test_gscraper.rb
-test/search/query_from_url.rb
-test/search/query_result.rb
-test/search/query_pages.rb
-test/search/page_results.rb
+tasks/spec.rb
+spec/spec_helper.rb
+spec/extensions/uri/query_params_spec.rb
+spec/extensions/uri/http_spec.rb
+spec/has_pages_examples.rb
+spec/page_has_results_examples.rb
+spec/search/query_spec.rb
+spec/search/ajax_query_spec.rb
+spec/search/web_query_spec.rb
+spec/gscraper_spec.rb
