@@ -1,0 +1,3 @@
+require 'rubygems'
+gem 'rspec', '>=1.1.3'
+require 'spec'
