@@ -1,4 +1,0 @@
-$LOAD_PATH.unshift(File.expand_path(File.join(File.dirname(__FILE__),'..','lib')))
-
-require 'test/unit'
-require 'search'
